<resources>
    <string name="app_name">print</string>
    <string name="about">О нас</string>
    <string name="delivery">Доставка</string>
    <string name="price">Цены</string>
    <string name="payment">Оплата</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_tel">Введите номер телефона</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Продолжить</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="ver_app">Версия программы</string>
    <string name="exit">Выход</string>

    <string-array name="size_array">
        <item>10 x 15 (а6)</item>
        <item>13 x 18 </item>
        <item>15 x 21 (а5)</item>
        <item>21 x 30 (а4)</item>
    </string-array>

    <string-array name="quantity_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="quality_array">
        <item>Эконом</item>
        <item>Стандарт</item>
    </string-array>

</resources>